# Floating-Sandbox

./: .gitattributes  .gitignore  BUILD-Ubuntu.md  BUILD-Windows.md  BUILD-macOS.md  Building FS on Ubuntu.md  CMakeLists.txt  FloatingSandbox TODO.txt  How to Build a Ship.md  NPCs.txt  README.md  ShipBuilder TODO.txt  ShipBuilder.txt  UserSettings.example-linux.cmake  UserSettings.example-macos.cmake  UserSettings.example-windows.cmake  UserSettings.example.cmake  changes.txt  devil-issue-95.patch  license.txt
Benchmarks/: AutoTexturization.cpp  CMakeLists.txt  DiffuseLight.cpp  DivisionByZero.cpp  GameMath.cpp  Logarithm.cpp  PrecalculatedFunction.cpp  SingleVectorNormalization.cpp  Step.cpp  TopN.cpp  UpdateSpringForces.cpp  Utils.cpp  Utils.h  VectorNormalization.cpp
FloatingSandbox/: AboutDialog.cpp  AboutDialog.h  BootSettingsDialog.cpp  BootSettingsDialog.h  CMakeLists.txt  CheckForUpdatesDialog.cpp  CheckForUpdatesDialog.h  CreditsPanel.cpp  CreditsPanel.h  DebugDialog.cpp  DebugDialog.h  EventTickerPanel.cpp  EventTickerPanel.h  GLCanvas.h  HelpDialog.cpp  HelpDialog.h  LocalizationHelpers.cpp  LocalizationHelpers.h  LocalizationManager.cpp  LocalizationManager.h  LoggingDialog.cpp  LoggingDialog.h  MainApp.cpp  MainFrame.cpp  MainFrame.h  Music.cpp  Music.h  MusicController.cpp  MusicController.h  NewVersionDisplayDialog.cpp  NewVersionDisplayDialog.h  OpenGLContext.cpp  OpenGLContext.h  PreferencesDialog.cpp  PreferencesDialog.h  ProbePanel.cpp  ProbePanel.h  ScalarTimeSeriesProbeControl.cpp  ScalarTimeSeriesProbeControl.h  SettingsDialog - Copy.cpp  (+47 more)
GPUCalc/: AddGPUCalculator.cpp  AddGPUCalculator.h  CMakeLists.txt  GPUCalcContext.cpp  GPUCalcContext.h  GPUCalcContextFactory.cpp  GPUCalcContextFactory.h  GPUCalculator.cpp  GPUCalculator.h  GPUCalculatorFactory.cpp  GPUCalculatorFactory.h  IOpenGLContext.h  PixelCoordsGPUCalculator.cpp  PixelCoordsGPUCalculator.h  ShaderTraits.cpp  ShaderTraits.h  TestGPUCalcContext.cpp  TestGPUCalcContext.h  TestGPUCalculator.cpp  TestGPUCalculator.h
GPUCalcTest/: AddTest.cpp  AddTest.h  CMakeLists.txt  MainApp.cpp  MainFrame.cpp  MainFrame.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLInitTest.h  PixelCoordsTest.cpp  PixelCoordsTest.h  TestCase.h  TestRun.h
Game/: AntiMatterBomb.cpp  AntiMatterBomb.h  AntiMatterBombGadget.cpp  AntiMatterBombGadget.h  Bomb.h  Bombs.cpp  Bombs.h  BootSettings.cpp  CMakeLists.txt  Clouds.cpp  Clouds.h  ComputerCalibration.cpp  ComputerCalibration.h  DebugMarker.cpp  DebugMarker.h  ElectricalElements.cpp  ElectricalElements.h  ElectricalPanel.h  EventRecorder.h  FileSystem.h  FireExtinguishingBombGadget.cpp  FireExtinguishingBombGadget.h  FishSpeciesDatabase.cpp  FishSpeciesDatabase.h  Fishes.cpp  Fishes.h  Font.cpp  Font.h  ForceFields.cpp  ForceFields.h  Formulae.h  Frontiers.cpp  Frontiers.h  Gadget.h  Gadgets.cpp  Gadgets.h  GameController.cpp  GameController.h  GameController_StateMachines.cpp  GameEventDispatcher.h  (+174 more)
GameCore/: AABB.h  AABBSet.h  Algorithms.h  BarycentricCoords.cpp  BigEndian.h  BootSettings.cpp  BootSettings.h  BoundedVector.h  Buffer.h  Buffer2D.h  BufferAllocator.h  BuildInfo.h  CMakeLists.txt  CircularList.h  Colors.cpp  Colors.h  Conversions.h  DeSerializationBuffer.h  ElementContainer.h  ElementIndexRangeIterator.h  Endian.h  EnumFlags.h  ExponentialSliderCore.cpp  ExponentialSliderCore.h  FileSystem.h  Finalizer.h  FixedSetSliderCore.h  FixedSizeVector.h  FixedTickSliderCore.cpp  FixedTickSliderCore.h  FloatingPoint.h  GameChronometer.h  GameException.h  GameGeometry.h  GameMath.h  GameRandomEngine.h  GameTypes.cpp  GameTypes.h  GameWallClock.h  ISliderCore.h  (+49 more)
GameLib/: AntiMatterBomb.cpp  AntiMatterBomb.h  Bomb.h  Bombs.cpp  Bombs.h  Buffer.h  CMakeLists.txt  Cable.cpp  Cable.h  Cloud.h  Clouds.cpp  Clouds.h  ElectricalElement.cpp  ElectricalElement.h  ElectricalElements.cpp  ElectricalElements.h  ElementContainer.h  ElementIndexRangeIterator.h  FixedSizeVector.h  Font.cpp  Font.h  ForceFields.cpp  ForceFields.h  GameController.cpp  GameController.h  GameEventDispatcher.h  GameMath.h  GameOpenGL.cpp  GameOpenGL.h  GameParameters.cpp  GameParameters.h  GameRandomEngine.h  GameTypes.cpp  GameTypes.h  GameWallClock.h  Generator.cpp  Generator.h  IGameEventHandler.h  ImageSize.h  ImpactBomb.cpp  (+68 more)
GameOpenGL/: CMakeLists.txt  GameOpenGL.cpp  GameOpenGL.h  GameOpenGLMappedBuffer.h  GameOpenGL_Ext.cpp  GameOpenGL_Ext.h  ShaderManager.cpp.inl  ShaderManager.h  TriangleQuadElementArrayVBO.cpp  TriangleQuadElementArrayVBO.h  UploadedTextureManager.h
ShipBuilder/: CMakeLists.txt  MainApp.cpp
ShipBuilderLib/: AskPasswordDialog.cpp  AskPasswordDialog.h  CMakeLists.txt  ClipboardManager.h  Controller.cpp  Controller.h  EditAction.cpp  EditAction.h  ElectricalElementInstanceIndexFactory.h  GenericEphemeralVisualizationRestorePayload.h  GenericUndoPayload.h  IModelObservable.h  IUserInterface.h  InputState.h  InstancedElectricalElementSet.h  MainFrame.cpp  MainFrame.h  MaterialPalette.cpp  MaterialPalette.h  Model.cpp  Model.h  ModelController.cpp  ModelController.h  ModelValidationDialog.cpp  ModelValidationDialog.h  ModelValidationResults.h  ModelValidationSession.cpp  ModelValidationSession.h  ModelValidator.cpp  ModelValidator.h  NewPasswordDialog.cpp  NewPasswordDialog.h  OpenGLManager.h  Preferences.cpp  Preferences.h  ResizeDialog.cpp  ResizeDialog.h  SaveShipDialog.cpp  SaveShipDialog.h  SelectionManager.cpp  (+32 more)
ShipTools/: Baker.cpp  Baker.h  CMakeLists.txt  Helpers.cpp  Helpers.h  Main.cpp  Quantizer.cpp  Quantizer.h  Resizer.cpp  Resizer.h  ShipAnalyzer.cpp  ShipAnalyzer.h
Sources/: CMakeLists.txt  README.md
UIControls/: BitmappedBackgroundPanel.h  BitmappedCheckbox.h  CMakeLists.txt  ElectricalElementControl.cpp  ElectricalElementControl.h  KeyEventForwardingControl.h  LayoutHelper.h  ScalarTimeSeriesProbeControl.cpp  ScalarTimeSeriesProbeControl.h  ShipAutomaticSwitchControl.h  ShipInteractiveSwitchControl.h  ShipSwitchControl.h  SliderControl.h  UnFocusablePanel.h
UILib/: BitmapButton.h  BitmapRadioButton.h  BitmapToggleButton.h  CMakeLists.txt  EditSpinBox.h  (+36 more)
(+2606 files in other folders)
